# product-analysis

./: .gitignore  ADMIN_UI_GUIDE.md  CLAUDE.md  E2E_TEST_REPORT.md  EXECUTIVE_SUMMARY.md  INVESTIGATION_SUMMARY.md  README.md
backend/: .env.example  README.md  alembic.ini  coverage.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 03bcf4cf0146_add_webhook_and_polling_fields_to_.py  (+10 more)
backend/app/: __init__.py  config.py  database.py  main.py
backend/scripts/: seed_agents_and_tools.py  seed_explore_codebase_tool.py  update_brainstorm_system_prompt.py
backend/tests/: TEST_ISOLATION_ISSUE.md  conftest.py  test_analysis_endpoint.py  test_analysis_integration.py  test_analysis_mapper.py  test_analysis_schemas.py  test_api_brainstorm_streaming.py  test_api_brainstorms.py  test_api_brainstorms_comprehensive.py  test_api_brainstorms_ws.py  test_api_features.py  test_api_features_analysis.py  test_api_idea_evaluation.py  test_api_ideas.py  test_api_ideas_comprehensive.py  test_brainstorming_service.py  test_config.py  test_database.py  test_flattened_analysis_schema.py  test_github_service.py  test_integration_brainstorm.py  test_integration_brainstorm_ws.py  test_integration_ideas.py  test_main.py  test_models.py  test_models_brainstorm.py  test_models_idea.py  test_polling_service.py  test_polling_task.py  test_schemas.py  test_schemas_brainstorm.py  test_schemas_idea.py  test_service_brainstorming.py  test_service_idea_evaluation.py  test_webhook_comprehensive.py  test_webhook_endpoint.py  test_webhook_schemas.py  test_webhook_security.py
(+237 files in other folders)
